# open-env-meta

./: .gitignore  Dockerfile  __init__.py  app.py  client.py  environment.py  graders.py  inference.py  requirements.txt
Downloads/openenv-code-review/openenv-code-review/: README.md  graders.py  inference.py  models.py  pyproject.toml  tasks.py
Downloads/openenv-code-review/openenv-code-review/server/: __init__.py  app.py  gradio_ui.py
Downloads/openenv-code-review/openenv-code-review/tests/: test_environment.py
server/: code_review_environment.py
tests/: test_environment.py  test_graders.py
